hard-gists/6cd16631253eed21f37f/run.log
=== Docker Run Log for 6cd16631253eed21f37f ===
Started at: Mi 29. Okt 16:50:42 CET 2025

[2025-10-29 16:50:42] START: Running container for 6cd16631253eed21f37f
[2025-10-29 16:50:43] SUCCESS: Container d59cd5a454badea69262d889b298982aa7e44ac4aef58399de55f63f070ad194 started for 6cd16631253eed21f37f
=== Container logs for 6cd16631253eed21f37f ===
  File "/snippet.py", line 171
    print set,
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6cd16631253eed21f37f ===
[2025-10-29 16:50:45] INFO: Container d59cd5a454badea69262d889b298982aa7e44ac4aef58399de55f63f070ad194 has stopped
